--- a/app/package.json
+++ b/app/package.json
@@ -20,8 +20,29 @@
     "react-calendar": "^3.5.0",
     "react-dom": "17.0.2",
     "react-native-paper": "^4.9.2",
+    "react-router-dom": "^6.0.1",
     "react-switch": "^6.0.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "@fullcalendar/daygrid": "^5.9.0",
+    "@fullcalendar/interaction": "^5.9.0",
+    "@fullcalendar/react": "^5.9.0",
+    "@fullcalendar/timegrid": "^5.9.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.13",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.1",
+    "font-awesome": "^4.7.0",
+    "fullcalendar": "^5.9.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "query-string": "^4.3.4",
+    "react-helmet": "^6.1.0",
+    "react-modal": "^3.14.3",
+    "react-scripts": "4.0.3",
+    "sass": "^1.39.2",
+    "web-vitals": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
