--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "next": "12.0.1",
     "react": "17.0.2",
     "react-calendar": "^3.5.0",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.18.1",
     "react-native-paper": "^4.9.2",
