--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "clsx": "^1.1.1",
     "cors": "^2.8.5",
     "dayjs": "^1.10.7",
+    "lodash": "^4.17.21",
     "motion-style": "^4.2.2",
     "next": "12.0.1",
     "react": "17.0.2",
